@@ -28,6 +28,7 @@ import com.google.common.reflect.ClassPath;
 import com.google.common.reflect.ClassPath.ResourceInfo;
 import com.google.common.testing.TestLogHandler;
 import com.google.common.truth.Expect;
+import java.io.File;
 import java.io.IOException;
 import java.io.Reader;
 import java.io.Writer;
@@ -36,7 +37,6 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.Objects;
@@ -130,8 +130,10 @@ public class ConfigurationFileChecks {
           "overflow.config",
           "termination.config",
           "termination.violation.witness",
+          // handled by WitnessOptions when path to witness is specified with -witness
           "witness.validation.violation.config",
           "witness.validation.correctness.config",
+          "witness.validation.correctness.isa",
           "pcc.proofgen.doPCC",
           "pcc.strategy",
           "pcc.cmc.configFiles",
@@ -205,7 +207,7 @@ public class ConfigurationFileChecks {
     private TimeSpan cpuTimeRequired = TimeSpan.ofNanos(-1);
   }
 
-  private static final Path CONFIG_DIR = Paths.get("config");
+  private static final Path CONFIG_DIR = Path.of("config");
 
   @Parameters(name = "{0}")
   public static Object[] getConfigFiles() throws IOException {
@@ -216,11 +218,10 @@ public class ConfigurationFileChecks {
             .filter(resource -> resource.getResourceName().endsWith(".properties"))
             .filter(resource -> resource.getResourceName().contains("cpachecker"))
             .map(ResourceInfo::url);
-    try (@SuppressWarnings("StreamResourceLeak") // https://github.com/google/error-prone/issues/893
-        Stream<Path> configFiles =
-            Files.walk(CONFIG_DIR)
-                .filter(path -> path.getFileName().toString().endsWith(".properties"))
-                .sorted()) {
+    try (Stream<Path> configFiles =
+        Files.walk(CONFIG_DIR)
+            .filter(path -> path.getFileName().toString().endsWith(".properties"))
+            .sorted()) {
       return Stream.concat(configResources, configFiles).toArray();
     }
   }
@@ -246,7 +247,7 @@ public class ConfigurationFileChecks {
     if (pConfigFile instanceof Path) {
       configFile = (Path) pConfigFile;
     } else if (pConfigFile instanceof URL) {
-      configFile = Paths.get(((URL) pConfigFile).toURI());
+      configFile = Path.of(((URL) pConfigFile).toURI());
     } else {
       throw new AssertionError("Unexpected config file " + pConfigFile);
     }
@@ -283,6 +284,7 @@ public class ConfigurationFileChecks {
     checkOption(config, "java.sourcepath");
     checkOption(config, "java.version");
     checkOption(config, "parser.usePreprocessor");
+    checkOption(config, "parser.useClang");
 
     if (!configFile.toString().contains("ldv")) {
       // LDV configs are specific to their use case, so these options are allowed
@@ -329,7 +331,7 @@ public class ConfigurationFileChecks {
       return false;
     }
     Path basePath = CONFIG_DIR.relativize((Path) configFile);
-    return basePath.getName(0).equals(Paths.get("unmaintained"));
+    return basePath.getName(0).equals(Path.of("unmaintained"));
   }
 
   @Rule public TemporaryFolder tempFolder = new TemporaryFolder();
@@ -343,6 +345,10 @@ public class ConfigurationFileChecks {
   @Before
   public void createDummyInputAutomatonFiles() throws IOException {
     // Create files that some analyses expect as input files.
+
+    if(!new File(tempFolder.getRoot().getAbsolutePath() + "/Goals.txt").createNewFile()) {
+      throw new RuntimeException("File already exists!");
+    }
 
     copyFile(
         "config/specification/AssumptionGuidingAutomaton.spc",
@@ -373,8 +379,8 @@ public class ConfigurationFileChecks {
    *     the output file.
    */
   private static void copyFile(String from, String to, String... toMore) throws IOException {
-    try (Reader r = Files.newBufferedReader(Paths.get(from));
-        Writer w = IO.openOutputFile(Paths.get(to, toMore), StandardCharsets.UTF_8)) {
+    try (Reader r = Files.newBufferedReader(Path.of(from));
+        Writer w = IO.openOutputFile(Path.of(to, toMore), StandardCharsets.UTF_8)) {
       CharStreams.copy(r, w);
     }
   }
@@ -400,6 +406,7 @@ public class ConfigurationFileChecks {
     final boolean isSvcompConfig = basePath.toString().contains("svcomp");
     final boolean isTestGenerationConfig = basePath.toString().contains("testCaseGeneration");
     final boolean isDifferentialConfig = basePath.toString().contains("differentialAutomaton");
+    final boolean isConditionalTesting = basePath.toString().contains("conditional-testing");
 
     if (options.language == Language.JAVA) {
       assertThat(spec).endsWith("specification/JavaAssertion.spc");
@@ -446,6 +453,8 @@ public class ConfigurationFileChecks {
       if (!Strings.isNullOrEmpty(spec)) {
         assertThat(spec).endsWith("specification/modifications-present.spc");
       }
+    } else if(isConditionalTesting) {
+      assertThat(spec).endsWith("specification/StopAtLeaves.spc");
     } else if (spec != null) {
       // TODO should we somehow restrict which configs may specify "no specification"?
       assertThat(spec).endsWith("specification/default.spc");
@@ -459,7 +468,7 @@ public class ConfigurationFileChecks {
       assume()
           .that((Iterable<?>) configFile)
           .containsNoneOf(
-              Paths.get("includes"), Paths.get("pcc"), Paths.get("witnessValidation.properties"));
+              Path.of("includes"), Path.of("pcc"), Path.of("witnessValidation.properties"));
     }
 
     final OptionsWithSpecialHandlingInTest options = new OptionsWithSpecialHandlingInTest();
