@@ -15,7 +15,6 @@ import java.io.IOException;
 import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.junit.Test;
@@ -99,7 +98,7 @@ public class ARGToAutomatonConverterTest extends AbstractTranslationTest {
 
   @Test
   public void test() throws Exception {
-    Path fullPath = Paths.get(TEST_DIR_PATH, program);
+    Path fullPath = Path.of(TEST_DIR_PATH, program);
 
     // generate ARG:
     resetCFANodeCounter();
